@@ -23,27 +23,13 @@ import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 import java.nio.charset.Charset
 
-val cliktVersion: String by project
-val config4kVersion: String by project
-val exposedVersion: String by project
-val graalVmVersion: String by project
-val jacksonVersion: String by project
-val hikariVersion: String by project
-val kotestVersion: String by project
-val kotlinxCoroutinesVersion: String by project
-val log4jCoreVersion: String by project
-val postgresVersion: String by project
-val reflectionsVersion: String by project
-val sw360ClientVersion: String by project
-val greenMailVersion: String by project
-
 plugins {
     // Apply core plugins.
     application
 
     // Apply third-party plugins.
-    id("com.github.johnrengelman.shadow")
-    id("com.palantir.graal")
+    alias(libs.plugins.graal)
+    alias(libs.plugins.shadow)
 }
 
 application {
@@ -52,15 +38,16 @@ application {
 }
 
 graal {
-    graalVersion(graalVmVersion)
+    graalVersion(libs.versions.graal.get())
     javaVersion("17")
 
+    // Build a standalone native executable or report a failure.
     option("--no-fallback")
 
     // Work-around for:
-    // "com.oracle.graal.pointsto.constraints.UnresolvedElementException:
-    //  Discovered unresolved type during parsing: android.os.Build$VERSION"
-    option("--allow-incomplete-classpath")
+    // "WARNING: Unknown module: org.graalvm.nativeimage.llvm specified to --add-exports"
+    option("-J--add-modules")
+    option("-JALL-SYSTEM")
 
     // Work-around for:
     // "Error: Classes that should be initialized at run time got initialized during image building"
@@ -161,27 +148,25 @@ dependencies {
     implementation(project(":utils:ort-utils"))
     implementation(project(":utils:spdx-utils"))
 
-    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion")
-    implementation("com.github.ajalt.clikt:clikt:$cliktVersion")
-    implementation("com.zaxxer:HikariCP:$hikariVersion")
-    implementation("io.github.config4k:config4k:$config4kVersion")
-    implementation("org.apache.logging.log4j:log4j-core:$log4jCoreVersion")
-    implementation("org.apache.logging.log4j:log4j-slf4j-impl:$log4jCoreVersion")
-    implementation("org.eclipse.sw360:client:$sw360ClientVersion")
-    implementation("org.jetbrains.exposed:exposed-core:$exposedVersion")
-    implementation("org.jetbrains.exposed:exposed-dao:$exposedVersion")
-    implementation("org.jetbrains.exposed:exposed-jdbc:$exposedVersion")
-    implementation("org.jetbrains.exposed:exposed-java-time:$exposedVersion")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion")
-    implementation("org.postgresql:postgresql:$postgresVersion")
-    implementation("org.reflections:reflections:$reflectionsVersion")
+    implementation(libs.bundles.exposed)
+    implementation(libs.clikt)
+    implementation(libs.config4k)
+    implementation(libs.hikari)
+    implementation(libs.jacksonDatabind)
+    implementation(libs.jacksonModuleKotlin)
+    implementation(libs.kotlinxCoroutines)
+    implementation(libs.log4jCore)
+    implementation(libs.log4jImplSlf4j)
+    implementation(libs.postgres)
+    implementation(libs.reflections)
+    implementation(libs.sw360Client)
 
     testImplementation(project(":utils:test-utils"))
 
-    testImplementation("com.icegreen:greenmail:$greenMailVersion")
-    testImplementation("io.kotest:kotest-runner-junit5:$kotestVersion")
-    testImplementation("io.kotest:kotest-assertions-core:$kotestVersion")
+    testImplementation(libs.greenmail)
+    testImplementation(libs.kotestAssertionsCore)
+    testImplementation(libs.kotestRunnerJunit5)
 
     funTestImplementation(sourceSets["main"].output)
     funTestImplementation(sourceSets["test"].output)
